--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -23,6 +23,7 @@
     "baseUrl": ".",
       "paths": {
         "@/*": ["src/*"],
+        "@assets/*": ["src/assets/*"],
       }
   },
   "include": ["src"]
